--- a/mainPage.html
+++ b/mainPage.html
@@ -1,7 +1,5 @@
 
- <!-- ***************************************************************************************
-    Author     : Andrea Martinez
-  **************************************************************************************** -->
+ <!-- ***** Author: Andrea Martinez ***** -->
   <!DOCTYPE html> 
  <html> 
 	    <head>
